--- a/4-experiments/experimento1-dataset2-parte2.ipynb
+++ b/4-experiments/experimento1-dataset2-parte2.ipynb
@@ -1651,7 +1651,7 @@
         "outputId": "8391db85-4e8b-4abe-9e26-b789395f3056"
       },
       "source": [
-        "# salvando os dos modelos obtidos durante o treinamento\r\n",
+        "# salvando os dois modelos obtidos durante o treinamento\r\n",
         "model.save('model1')\r\n",
         "best_model.save('model2')"
       ],
@@ -1795,12 +1795,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "64g06r7Zrfc8",
-        "outputId": "2ff57ef7-8e0a-48a7-d9db-06faaac3bead",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 350
-        }
+        },
+        "id": "64g06r7Zrfc8",
+        "outputId": "2ff57ef7-8e0a-48a7-d9db-06faaac3bead"
       },
       "source": [
         "# plotando a curva da Precisão, Sensibilidade e Acurácia \r\n",
@@ -1828,11 +1828,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ufKEBA_EsIc5",
-        "outputId": "f8640c2e-50aa-45ac-86a3-b5a30bfb4a29",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ufKEBA_EsIc5",
+        "outputId": "f8640c2e-50aa-45ac-86a3-b5a30bfb4a29"
       },
       "source": [
         "# analisando as melhores métricas encontradas para o modelo\r\n",
