--- a/3-models/2-inception.ipynb
+++ b/3-models/2-inception.ipynb
@@ -1,166 +1,164 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "complex-stability",
-   "metadata": {},
-   "source": [
-    "# Inception - Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "assumed-conference",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'wget' nÆo ‚ reconhecido como um comando interno\n",
-      "ou externo, um programa oper vel ou um arquivo em lotes.\n"
-     ]
+  "nbformat": 4,
+  "nbformat_minor": 5,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.7"
+    },
+    "colab": {
+      "name": "2-inception.ipynb",
+      "provenance": [],
+      "toc_visible": true
     }
-   ],
-   "source": [
-    "# baixando os pesos treinados da rede inception\n",
-    "!wget --no-check-certificate \\\n",
-    "    https://storage.googleapis.com/mledu-datasets/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5 \\\n",
-    "    -O /tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5"
-   ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "biblical-cyprus",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# referenciando o local em que os pesos estão armazenados\n",
-    "local_weights_file = '/tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5'\n",
-    "\n",
-    "# carregando a arquitetura inception pré-treinada\n",
-    "pre_trained_model = InceptionV3(input_shape = (256, 256, 3), \n",
-    "                                include_top = False, \n",
-    "                                weights = None)\n",
-    "\n",
-    "# carregando os pesos treinados com outros dados \n",
-    "pre_trained_model.load_weights(local_weights_file)\n",
-    "\n",
-    "# definindo as flags iniciais  \n",
-    "pre_trained_model.trainable = True\n",
-    "set_trainable = False\n",
-    "\n",
-    "# para a arquitetura inception, a rede será retreinada a partir da camada 'mixed6'\n",
-    "for layer in pre_trained_model.layers:\n",
-    "    if layer.name == 'mixed6':\n",
-    "        set_trainable = True\n",
-    "    if set_trainable:\n",
-    "        layer.trainable = True\n",
-    "    else:\n",
-    "        layer.trainable = False\n",
-    "\n",
-    "# visualizando a arquitetura definida\n",
-    "pre_trained_model.summary()\n",
-    "\n",
-    "# obtendo a última camada como sendo a nomeada por 'mixed7'\n",
-    "last_layer = pre_trained_model.get_layer('mixed7')\n",
-    "last_output = last_layer.output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "uniform-intermediate",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# definindo uma camada de achatamento\n",
-    "x = layers.Flatten()(last_output)\n",
-    "# conecatando a rede uma camada com 1024 neurônios e função de ativação relu\n",
-    "x = layers.Dense(units = 1024, activation = 'relu')(x)     \n",
-    "# conecatando a rede uma camada com 128 neurônios e função de ativação relu\n",
-    "x = layers.Dense(units = 512, activation = 'relu')(x) \n",
-    "# aplicando uma camada de dropout com uma taxa de 20% (normalização)\n",
-    "x = layers.Dropout(rate = 0.2)(x)                  \n",
-    "# adicionando uma camada de saída com um neurônio e uma função de ativação sigmoide\n",
-    "x = layers.Dense  (units = 1, activation = 'sigmoid')(x)           \n",
-    "\n",
-    "# conecatando as camadas definidas acima com a arquitetura inception\n",
-    "model = Model(pre_trained_model.input, x) \n",
-    "\n",
-    "# compilando a rede \n",
-    "model.compile(optimizer = 'adam', loss = 'binary_crossentropy', metrics = ['acc']) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "banner-radiation",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# definindo o caminho pelo qual os pesos serão armazenados \n",
-    "filepath = \"transferlearning_weights.hdf5\"\n",
-    "# callback para salvar o melhor valor dos pesos em relação ao desempenho com os dados de validação \n",
-    "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, mode = 'max')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "communist-initial",
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "ename": "NameError",
-     "evalue": "name 'callbacks' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-3fc82156e44f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcallbacks\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mcallbacks\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'callbacks' is not defined"
-     ]
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "complex-stability"
+      },
+      "source": [
+        "# Inception - Model"
+      ],
+      "id": "complex-stability"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "assumed-conference"
+      },
+      "source": [
+        "# baixando os pesos treinados da rede inception\n",
+        "!wget --no-check-certificate \\\n",
+        "    https://storage.googleapis.com/mledu-datasets/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5 \\\n",
+        "    -O /tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5"
+      ],
+      "id": "assumed-conference",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "biblical-cyprus"
+      },
+      "source": [
+        "# referenciando o local em que os pesos estão armazenados\n",
+        "local_weights_file = '/tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5'\n",
+        "\n",
+        "# carregando a arquitetura inception pré-treinada\n",
+        "pre_trained_model = InceptionV3(input_shape = (256, 256, 3), \n",
+        "                                include_top = False, \n",
+        "                                weights = None)\n",
+        "\n",
+        "# carregando os pesos treinados com outros dados \n",
+        "pre_trained_model.load_weights(local_weights_file)\n",
+        "\n",
+        "# definindo as flags iniciais  \n",
+        "pre_trained_model.trainable = True\n",
+        "set_trainable = False\n",
+        "\n",
+        "# para a arquitetura inception, a rede será retreinada a partir da camada 'mixed6'\n",
+        "for layer in pre_trained_model.layers:\n",
+        "    if layer.name == 'mixed6':\n",
+        "        set_trainable = True\n",
+        "    if set_trainable:\n",
+        "        layer.trainable = True\n",
+        "    else:\n",
+        "        layer.trainable = False\n",
+        "\n",
+        "# visualizando a arquitetura definida\n",
+        "pre_trained_model.summary()\n",
+        "\n",
+        "# obtendo a última camada como sendo a nomeada por 'mixed7'\n",
+        "last_layer = pre_trained_model.get_layer('mixed7')\n",
+        "last_output = last_layer.output"
+      ],
+      "id": "biblical-cyprus",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uniform-intermediate"
+      },
+      "source": [
+        "# definindo uma camada de achatamento\n",
+        "x = layers.Flatten()(last_output)\n",
+        "# conecatando a rede uma camada com 1024 neurônios e função de ativação relu\n",
+        "x = layers.Dense(units = 1024, activation = 'relu')(x)     \n",
+        "# conecatando a rede uma camada com 128 neurônios e função de ativação relu\n",
+        "x = layers.Dense(units = 512, activation = 'relu')(x) \n",
+        "# aplicando uma camada de dropout com uma taxa de 20% (normalização)\n",
+        "x = layers.Dropout(rate = 0.2)(x)                  \n",
+        "# adicionando uma camada de saída com um neurônio e uma função de ativação sigmoide\n",
+        "x = layers.Dense  (units = 1, activation = 'sigmoid')(x)           \n",
+        "\n",
+        "# conecatando as camadas definidas acima com a arquitetura inception\n",
+        "model = Model(pre_trained_model.input, x) \n",
+        "\n",
+        "# compilando a rede \n",
+        "model.compile(optimizer = 'adam', loss = 'binary_crossentropy', metrics = ['acc']) "
+      ],
+      "id": "uniform-intermediate",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "banner-radiation"
+      },
+      "source": [
+        "# definindo o caminho pelo qual os pesos serão armazenados \n",
+        "filepath = \"transferlearning_weights.hdf5\"\n",
+        "# callback para salvar o melhor valor dos pesos em relação ao desempenho com os dados de validação \n",
+        "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, mode = 'max')"
+      ],
+      "id": "banner-radiation",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "communist-initial"
+      },
+      "source": [
+        "callbacks = [checkpoint]"
+      ],
+      "id": "communist-initial",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "experimental-impression"
+      },
+      "source": [
+        "history = model.fit_generator(data_aug, steps_per_epoch = len(trainX) // batch_size, \n",
+        "                              validation_data = (testX, testY), validation_steps = len(testX) // batch_size,\n",
+        "                              callbacks = callbacks, epochs = 100)"
+      ],
+      "id": "experimental-impression",
+      "execution_count": null,
+      "outputs": []
     }
-   ],
-   "source": [
-    "callbacks = [callbacks]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "experimental-impression",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "history = model.fit_generator(data_aug, steps_per_epoch = len(trainX) // batch_size, \n",
-    "                              validation_data = (testX, testY), validation_steps = len(testX) // batch_size,\n",
-    "                              callbacks = callbacks, epochs = 100)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.7"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  ]
 }
