--- a/3-models/2-densenet.ipynb
+++ b/3-models/2-densenet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "2-densenet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOrQgKTwvq0+KrNUvm+scy8"
+      "authorship_tag": "ABX9TyMCCCRdlIwJGOHXkr6l4qPY"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +16,15 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1iMnUWDKdwZe"
+      },
+      "source": [
+        "# DenseNet - Model"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
