--- a/2-datasets-preprocessing/4-dataset-nih.ipynb
+++ b/2-datasets-preprocessing/4-dataset-nih.ipynb
@@ -56,16 +56,18 @@
       "source": [
         "from keras.preprocessing.image import ImageDataGenerator\n",
         "import urllib.request\n",
-        "#urllib.request.urlretrieve('https://raw.githubusercontent.com/Alyssonmach/cnn-lung-diseases/main/assets/cxr8_dados.py', 'cxr8_dados.py')\n",
+        "urllib.request.urlretrieve('https://raw.githubusercontent.com/Alyssonmach/cnn-lung-diseases/main/assets/cxr8_dados.py', 'cxr8_dados.py')\n",
         "urllib.request.urlretrieve('https://raw.githubusercontent.com/Alyssonmach/histogram-equalization/main/histogram_equalization.py', 'histogram_equalization.py')\n",
         "from histogram_equalization import histogram_equalization\n",
         "from cxr8_dados import data_download, organize_csv, download_images, train_validation_test_split \n",
+        "import glob\n",
+        "import time\n",
         "\n",
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")"
       ],
       "id": "brilliant-oxide",
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -88,7 +90,7 @@
         "data_download('https://raw.githubusercontent.com/Alyssonmach/cnn-lung-diseases/main/assets/dataframe-info.csv', 'dataframe-info.csv')"
       ],
       "id": "flexible-argentina",
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -111,10 +113,13 @@
       },
       "source": [
         "# especificando o diretório com as imagens \n",
-        "IMAGE_DIR = '/content/drive/MyDrive/images'"
+        "IMAGE_DIR = ['/content/drive/MyDrive/images-nih1',\n",
+        "             '/content/drive/MyDrive/images-nih2',\n",
+        "             '/content/drive/MyDrive/images-nih3',\n",
+        "             '/content/drive/MyDrive/images-nih4']"
       ],
       "id": "heard-nightmare",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,17 +132,17 @@
         "dataframe, (normal, anormal) = organize_csv('/content/dataframe-info.csv')"
       ],
       "id": "digital-upper",
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "molecular-trick",
-        "outputId": "2350e153-b2b8-46af-a06d-fa300e326a60",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6c1c829d-2cad-428c-e477-458631d666ad"
       },
       "source": [
         "# visualizando o dataframe\n",
@@ -145,7 +150,7 @@
         "print('dataframe shape:', dataframe.shape)"
       ],
       "id": "molecular-trick",
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,17 +177,17 @@
         "train_df, validation_df, test_df = train_validation_test_split(dataframe)"
       ],
       "id": "regulation-parker",
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "informational-rhythm",
-        "outputId": "7837e03f-4bdb-43de-8b77-a49105c55050",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "83e10b11-bc73-4f1d-b031-36c48571cd5f"
       },
       "source": [
         "# visualizando detalhes dos dados de treinamento\n",
@@ -190,7 +195,7 @@
         "print('train_df shape:', train_df.shape)"
       ],
       "id": "informational-rhythm",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,10 +216,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "prospective-mailing",
-        "outputId": "0e3a9b96-1dba-48b3-e1f1-0af824a54ad1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b68625e3-9199-457c-aa57-25071190894e"
       },
       "source": [
         "# visualizando detalhes dos dados de treinamento\n",
@@ -222,7 +227,7 @@
         "print('validation_df shape:', validation_df.shape)"
       ],
       "id": "prospective-mailing",
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,10 +248,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "applied-progress",
-        "outputId": "e79a299f-499f-4645-df42-9fc3e1b84bd3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "188bd197-2ab5-4702-c6b4-784cb392129b"
       },
       "source": [
         "# visualizando detalhes dos dados de teste \n",
@@ -254,7 +259,7 @@
         "print('validation_df shape:', test_df.shape)"
       ],
       "id": "applied-progress",
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,6 +287,122 @@
       "id": "absolute-rogers"
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "curSC-HwT-61"
+      },
+      "source": [
+        "# função para baixar os caminhos de todas as imagens\n",
+        "def find_files():\n",
+        "\n",
+        "  file1 = glob.glob('/content/drive/MyDrive/images-nih1/images/*.png')\n",
+        "  time.sleep(10)\n",
+        "  file2 = glob.glob('/content/drive/MyDrive/images-nih2/images/*.png')\n",
+        "  time.sleep(10)\n",
+        "  file3 = glob.glob('/content/drive/MyDrive/images-nih3/images/*.png')\n",
+        "  time.sleep(10)\n",
+        "  file4 = glob.glob('/content/drive/MyDrive/images-nih4/images/*.png')\n",
+        "\n",
+        "  return file1, file2, file3, file4\n",
+        "\n",
+        "file1, file2, file3, file4 = find_files()\n",
+        "\n",
+        "# função para adicionar os caminhos das imagens nos diretórios a partir do arquivo csv\n",
+        "def replace_file(dataframe, new_file, image):\n",
+        "\n",
+        "  index = int(dataframe[dataframe['Image Index'] == image].index.values)\n",
+        "  dataframe['Image Index'][index] = new_file\n",
+        "\n",
+        "  return None"
+      ],
+      "id": "curSC-HwT-61",
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XqIS1xsxNuaa"
+      },
+      "source": [
+        "# organizando o arquivo csv \n",
+        "\n",
+        "result = ''\n",
+        "\n",
+        "for image in train_df['Image Index']:\n",
+        "  for file_ in file1:\n",
+        "    result = file_.find(image)\n",
+        "    if result > 0:\n",
+        "      replace_file(dataframe = train_df, new_file = file_, image = image)\n",
+        "  for file_ in file2:\n",
+        "    result = file_.find(image)\n",
+        "    if result > 0:\n",
+        "      replace_file(dataframe = train_df, new_file = file_, image = image)\n",
+        "  for file_ in file3:\n",
+        "    result = file_.find(image)\n",
+        "    if result > 0:\n",
+        "      replace_file(dataframe = train_df, new_file = file_, image = image)\n",
+        "  for file_ in file4:\n",
+        "    result = file_.find(image)\n",
+        "    if result > 0:\n",
+        "      replace_file(dataframe = train_df, new_file = file_, image = image)\n",
+        "\n",
+        "for image in validation_df['Image Index']:\n",
+        "  for file_ in file1:\n",
+        "    result = file_.find(image)\n",
+        "    if result > 0:\n",
+        "      replace_file(dataframe = validation_df, new_file = file_, image = image)\n",
+        "  for file_ in file2:\n",
+        "    result = file_.find(image)\n",
+        "    if result > 0:\n",
+        "      replace_file(dataframe = validation_df, new_file = file_, image = image)\n",
+        "  for file_ in file3:\n",
+        "    result = file_.find(image)\n",
+        "    if result > 0:\n",
+        "      replace_file(dataframe = validation_df, new_file = file_, image = image)\n",
+        "  for file_ in file4:\n",
+        "    result = file_.find(image)\n",
+        "    if result > 0:\n",
+        "      replace_file(dataframe = validation_df, new_file = file_, image = image)\n",
+        "\n",
+        "for image in test_df['Image Index']:\n",
+        "  for file_ in file1:\n",
+        "    result = file_.find(image)\n",
+        "    if result > 0:\n",
+        "      replace_file(dataframe = test_df, new_file = file_, image = image)\n",
+        "  for file_ in file2:\n",
+        "    result = file_.find(image)\n",
+        "    if result > 0:\n",
+        "      replace_file(dataframe = test_df, new_file = file_, image = image)\n",
+        "  for file_ in file3:\n",
+        "    result = file_.find(image)\n",
+        "    if result > 0:\n",
+        "      replace_file(dataframe = test_df, new_file = file_, image = image)\n",
+        "  for file_ in file4:\n",
+        "    result = file_.find(image)\n",
+        "    if result > 0:\n",
+        "      replace_file(dataframe = test_df, new_file = file_, image = image)\n"
+      ],
+      "id": "XqIS1xsxNuaa",
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "04gBKWqghiFv"
+      },
+      "source": [
+        "# salvando os dataframes manipulados em arquivos csv\n",
+        "train_df.to_csv('train_df.csv')\n",
+        "validation_df.to_csv('validation_df.csv')\n",
+        "test_df.to_csv('test_df.csv')"
+      ],
+      "id": "04gBKWqghiFv",
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "dietary-sarah"
@@ -295,10 +416,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "smaller-rescue",
-        "outputId": "d0f5a61f-fc5c-4834-8b35-857286e773c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8bac529f-f317-47ca-c3bf-f727bd8c5517"
       },
       "source": [
         "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
@@ -308,7 +429,6 @@
         "# criando o gerador de imagens de treinamento \n",
         "train_generator = image_generator.flow_from_dataframe(\n",
         "                                                      dataframe = train_df,\n",
-        "                                                      directory = IMAGE_DIR,\n",
         "                                                      x_col = 'Image Index',\n",
         "                                                      y_col = 'labels',\n",
         "                                                      batch_size = 256,\n",
@@ -319,8 +439,7 @@
         "                                                      target_size = (256, 256))\n",
         "# criando o gerador de imagens de validação \n",
         "valid_generator = image_generator.flow_from_dataframe(\n",
-        "                                                      dataframe = validation_df,\n",
-        "                                                      directory = IMAGE_DIR, \n",
+        "                                                      dataframe = validation_df, \n",
         "                                                      x_col = 'Image Index',\n",
         "                                                      y_col = 'labels',\n",
         "                                                      batch_size = 128,\n",
@@ -334,7 +453,6 @@
         "\n",
         "test_generator = test_datagen.flow_from_dataframe(\n",
         "                                                  dataframe = test_df, \n",
-        "                                                  directory = IMAGE_DIR,\n",
         "                                                  x_col = 'Image Index',\n",
         "                                                  y_col = 'labels',\n",
         "                                                  batch_size = 128,\n",
@@ -344,14 +462,14 @@
         "                                                  target_size = (256, 256))"
       ],
       "id": "smaller-rescue",
-      "execution_count": 10,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Found 36449 validated image filenames.\n",
-            "Found 741 validated image filenames.\n",
-            "Found 760 validated image filenames.\n"
+            "Found 84497 validated image filenames.\n",
+            "Found 1725 validated image filenames.\n",
+            "Found 1760 validated image filenames.\n"
           ],
           "name": "stdout"
         }
@@ -371,10 +489,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "medical-assurance",
-        "outputId": "ccb18383-8896-40df-e1c6-4d36cec62513",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c1b08342-413f-430e-9ed1-3fc1c23abe2d"
       },
       "source": [
         "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
@@ -383,7 +501,6 @@
         "# criando o gerador de imagens de treinamento \n",
         "train_generator = image_generator.flow_from_dataframe(\n",
         "                                                      dataframe = train_df,\n",
-        "                                                      directory = IMAGE_DIR,\n",
         "                                                      x_col = 'Image Index',\n",
         "                                                      y_col = 'labels',\n",
         "                                                      batch_size = 256,\n",
@@ -395,7 +512,6 @@
         "# criando o gerador de imagens de validação \n",
         "valid_generator = image_generator.flow_from_dataframe(\n",
         "                                                      dataframe = validation_df,\n",
-        "                                                      directory = IMAGE_DIR, \n",
         "                                                      x_col = 'Image Index',\n",
         "                                                      y_col = 'labels',\n",
         "                                                      batch_size = 128,\n",
@@ -409,7 +525,6 @@
         "\n",
         "test_generator = test_datagen.flow_from_dataframe(\n",
         "                                                  dataframe = test_df, \n",
-        "                                                  directory = IMAGE_DIR,\n",
         "                                                  x_col = 'Image Index',\n",
         "                                                  y_col = 'labels',\n",
         "                                                  batch_size = 128,\n",
@@ -419,14 +534,14 @@
         "                                                  target_size = (256, 256))"
       ],
       "id": "medical-assurance",
-      "execution_count": 9,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Found 36449 validated image filenames.\n",
-            "Found 741 validated image filenames.\n",
-            "Found 760 validated image filenames.\n"
+            "Found 84497 validated image filenames.\n",
+            "Found 1725 validated image filenames.\n",
+            "Found 1760 validated image filenames.\n"
           ],
           "name": "stdout"
         }
