--- a/2-datasets-preprocessing/4-dataset-nih.ipynb
+++ b/2-datasets-preprocessing/4-dataset-nih.ipynb
@@ -56,9 +56,9 @@
       "source": [
         "from keras.preprocessing.image import ImageDataGenerator\n",
         "import urllib.request\n",
-        "urllib.request.urlretrieve('https://raw.githubusercontent.com/Alyssonmach/cnn-lung-diseases/main/assets/cxr8_dados.py', 'cxr8_dados.py')\n",
-        "urllib.request.urlretrieve('https://raw.githubusercontent.com/Alyssonmach/histogram-equalization/main/histogram_equalization.py', 'histogram_equalization.py')\n",
-        "from histogram_equalization import histogram_equalization\n",
+        "path = 'https://raw.githubusercontent.com/Alyssonmach/cnn-lung-diseases/main/assets/cxr8_dados.py'\n",
+        "file_path = 'cxr8_dados.py'\n",
+        "urllib.request.urlretrieve(path, file_path)\n",
         "from cxr8_dados import data_download, organize_csv, download_images, train_validation_test_split \n",
         "import glob\n",
         "import time\n",
@@ -119,7 +119,7 @@
         "             '/content/drive/MyDrive/images-nih4']"
       ],
       "id": "heard-nightmare",
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -138,11 +138,53 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Yq4fZfSS96XR",
+        "outputId": "0bd89f62-6747-4eb3-e3ed-e6c5e1a934b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# visualizando a quantidade de dados disponíveis em cada classe\n",
+        "dataframe['finding_labels'].value_counts()"
+      ],
+      "id": "Yq4fZfSS96XR",
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "No Finding            60361\n",
+              "Infiltration           9547\n",
+              "Atelectasis            4215\n",
+              "Effusion               3955\n",
+              "Nodule                 2705\n",
+              "Pneumothorax           2194\n",
+              "Consolidation          1310\n",
+              "Pleural_Thickening     1126\n",
+              "Emphysema               892\n",
+              "Fibrosis                727\n",
+              "Edema                   628\n",
+              "Pneumonia               322\n",
+              "Name: finding_labels, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "molecular-trick",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6c1c829d-2cad-428c-e477-458631d666ad"
+        "outputId": "b804d1b2-e6d2-40d2-9c0e-35607437a335"
       },
       "source": [
         "# visualizando o dataframe\n",
@@ -150,18 +192,18 @@
         "print('dataframe shape:', dataframe.shape)"
       ],
       "id": "molecular-trick",
-      "execution_count": 7,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "        Image Index  labels\n",
-            "0  00011895_001.png       0\n",
-            "1  00015384_004.png       0\n",
-            "2  00028131_011.png       0\n",
-            "3  00028792_001.png       1\n",
-            "4  00010716_000.png       0\n",
-            "dataframe shape: (87982, 2)\n"
+            "        Image Index  finding_labels  labels\n",
+            "0  00011895_001.png               0       0\n",
+            "1  00015384_004.png               0       0\n",
+            "2  00028131_011.png               0       0\n",
+            "3  00028792_001.png               1       1\n",
+            "4  00010716_000.png               0       0\n",
+            "dataframe shape: (87982, 3)\n"
           ],
           "name": "stdout"
         }
@@ -177,7 +219,7 @@
         "train_df, validation_df, test_df = train_validation_test_split(dataframe)"
       ],
       "id": "regulation-parker",
-      "execution_count": 8,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -187,7 +229,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "83e10b11-bc73-4f1d-b031-36c48571cd5f"
+        "outputId": "617d8093-eb45-4ef2-af15-99469b209d55"
       },
       "source": [
         "# visualizando detalhes dos dados de treinamento\n",
@@ -195,18 +237,18 @@
         "print('train_df shape:', train_df.shape)"
       ],
       "id": "informational-rhythm",
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "            Image Index  labels\n",
-            "68473  00013172_000.png       1\n",
-            "86448  00010007_169.png       1\n",
-            "61928  00016051_010.png       0\n",
-            "44912  00004594_002.png       0\n",
-            "20587  00007406_003.png       0\n",
-            "train_df shape: (84497, 2)\n"
+            "            Image Index  finding_labels  labels\n",
+            "87745  00000322_011.png               6       1\n",
+            "82970  00006022_004.png               0       0\n",
+            "51704  00019766_008.png               0       0\n",
+            "38340  00017206_000.png               0       0\n",
+            "71153  00026810_041.png               1       1\n",
+            "train_df shape: (81074, 3)\n"
           ],
           "name": "stdout"
         }
@@ -219,7 +261,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b68625e3-9199-457c-aa57-25071190894e"
+        "outputId": "d81d4898-d339-419d-a645-fd7cfb0a60b2"
       },
       "source": [
         "# visualizando detalhes dos dados de treinamento\n",
@@ -227,18 +269,18 @@
         "print('validation_df shape:', validation_df.shape)"
       ],
       "id": "prospective-mailing",
-      "execution_count": 9,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "            Image Index  labels\n",
-            "57440  00016944_004.png       1\n",
-            "85690  00010695_015.png       1\n",
-            "52337  00011380_014.png       1\n",
-            "11606  00010749_000.png       1\n",
-            "27801  00012976_006.png       0\n",
-            "validation_df shape: (1725, 2)\n"
+            "            Image Index  finding_labels  labels\n",
+            "5623   00011667_001.png               0       0\n",
+            "63643  00009988_001.png               0       0\n",
+            "67737  00002664_000.png               0       0\n",
+            "76165  00011606_006.png               3       1\n",
+            "55740  00016719_016.png               6       1\n",
+            "validation_df shape: (4268, 3)\n"
           ],
           "name": "stdout"
         }
@@ -251,7 +293,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "188bd197-2ab5-4702-c6b4-784cb392129b"
+        "outputId": "bc11acc5-78f2-466a-ee83-ac86c44a4904"
       },
       "source": [
         "# visualizando detalhes dos dados de teste \n",
@@ -259,18 +301,18 @@
         "print('validation_df shape:', test_df.shape)"
       ],
       "id": "applied-progress",
-      "execution_count": 10,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "            Image Index  labels\n",
-            "3423   00004605_005.png       1\n",
-            "34940  00018610_042.png       1\n",
-            "1864   00029870_000.png       0\n",
-            "38846  00007632_014.png       1\n",
-            "46844  00001286_003.png       1\n",
-            "validation_df shape: (1760, 2)\n"
+            "            Image Index  finding_labels  labels\n",
+            "42532  00019214_000.png               0       0\n",
+            "5432   00011827_004.png               0       0\n",
+            "30045  00012485_001.png               0       0\n",
+            "10278  00025340_002.png               0       0\n",
+            "40900  00023741_000.png               0       0\n",
+            "validation_df shape: (2640, 3)\n"
           ],
           "name": "stdout"
         }
@@ -316,7 +358,7 @@
         "  return None"
       ],
       "id": "curSC-HwT-61",
-      "execution_count": 46,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -384,7 +426,7 @@
         "      replace_file(dataframe = test_df, new_file = file_, image = image)\n"
       ],
       "id": "XqIS1xsxNuaa",
-      "execution_count": 62,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -399,7 +441,21 @@
         "test_df.to_csv('test_df.csv')"
       ],
       "id": "04gBKWqghiFv",
-      "execution_count": 68,
+      "execution_count": 79,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a-Rt1JV0gXWJ"
+      },
+      "source": [
+        "# dicionário com o balancemanto de pesos das classes\n",
+        "class_weights = {0: 3902, 1: 1224, 2: 578, 3: 3645, 4: 818, 5: 671,\n",
+        "                 6: 8770, 7: 55622, 8: 2497, 9: 1028, 10: 295, 11: 2024}"
+      ],
+      "id": "a-Rt1JV0gXWJ",
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -419,7 +475,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8bac529f-f317-47ca-c3bf-f727bd8c5517"
+        "outputId": "bc919859-199a-4a58-a76d-32603ae91e7d"
       },
       "source": [
         "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
@@ -430,22 +486,23 @@
         "train_generator = image_generator.flow_from_dataframe(\n",
         "                                                      dataframe = train_df,\n",
         "                                                      x_col = 'Image Index',\n",
-        "                                                      y_col = 'labels',\n",
+        "                                                      y_col = 'finding_labels',\n",
         "                                                      batch_size = 256,\n",
         "                                                      seed = 42,\n",
         "                                                      shuffle = True,\n",
-        "                                                      class_mode = 'raw',\n",
+        "                                                      class_mode = 'categorical',\n",
         "                                                      color_mode = 'rgb',\n",
         "                                                      target_size = (256, 256))\n",
         "# criando o gerador de imagens de validação \n",
         "valid_generator = image_generator.flow_from_dataframe(\n",
         "                                                      dataframe = validation_df, \n",
         "                                                      x_col = 'Image Index',\n",
-        "                                                      y_col = 'labels',\n",
+        "                                                      y_col = 'finding_labels',\n",
         "                                                      batch_size = 128,\n",
         "                                                      seed = 42,\n",
         "                                                      shuffle = True,\n",
-        "                                                      class_mode = 'raw',\n",
+        "                                                      class_mode = 'categorical',\n",
+        "                                                      color_mode = 'rgb',\n",
         "                                                      target_size = (256, 256))\n",
         "\n",
         "# normalizando as imagens de teste \n",
@@ -454,22 +511,23 @@
         "test_generator = test_datagen.flow_from_dataframe(\n",
         "                                                  dataframe = test_df, \n",
         "                                                  x_col = 'Image Index',\n",
-        "                                                  y_col = 'labels',\n",
+        "                                                  y_col = 'finding_labels',\n",
         "                                                  batch_size = 128,\n",
         "                                                  seed = 42,\n",
         "                                                  shuffle = True,\n",
-        "                                                  class_mode = 'raw',\n",
+        "                                                  class_mode = 'categorical',\n",
+        "                                                  color_mode = 'rgb',\n",
         "                                                  target_size = (256, 256))"
       ],
       "id": "smaller-rescue",
-      "execution_count": 69,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Found 84497 validated image filenames.\n",
-            "Found 1725 validated image filenames.\n",
-            "Found 1760 validated image filenames.\n"
+            "Found 81074 validated image filenames belonging to 12 classes.\n",
+            "Found 4268 validated image filenames belonging to 12 classes.\n",
+            "Found 2640 validated image filenames belonging to 12 classes.\n"
           ],
           "name": "stdout"
         }
@@ -492,7 +550,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c1b08342-413f-430e-9ed1-3fc1c23abe2d"
+        "outputId": "7bad5ac3-1114-4cd8-e2ab-0c8596f96701"
       },
       "source": [
         "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
@@ -502,22 +560,22 @@
         "train_generator = image_generator.flow_from_dataframe(\n",
         "                                                      dataframe = train_df,\n",
         "                                                      x_col = 'Image Index',\n",
-        "                                                      y_col = 'labels',\n",
+        "                                                      y_col = 'finding_labels',\n",
         "                                                      batch_size = 256,\n",
         "                                                      seed = 42,\n",
         "                                                      shuffle = True,\n",
-        "                                                      class_mode = 'raw',\n",
+        "                                                      class_mode = 'categorical',\n",
         "                                                      color_mode = 'rgb',\n",
         "                                                      target_size = (256, 256))\n",
         "# criando o gerador de imagens de validação \n",
         "valid_generator = image_generator.flow_from_dataframe(\n",
         "                                                      dataframe = validation_df,\n",
         "                                                      x_col = 'Image Index',\n",
-        "                                                      y_col = 'labels',\n",
+        "                                                      y_col = 'finding_labels',\n",
         "                                                      batch_size = 128,\n",
         "                                                      seed = 42,\n",
         "                                                      shuffle = True,\n",
-        "                                                      class_mode = 'raw',\n",
+        "                                                      class_mode = 'categorical',\n",
         "                                                      target_size = (256, 256))\n",
         "\n",
         "# normalizando as imagens de teste \n",
@@ -526,24 +584,65 @@
         "test_generator = test_datagen.flow_from_dataframe(\n",
         "                                                  dataframe = test_df, \n",
         "                                                  x_col = 'Image Index',\n",
-        "                                                  y_col = 'labels',\n",
+        "                                                  y_col = 'finding_labels',\n",
         "                                                  batch_size = 128,\n",
         "                                                  seed = 42,\n",
         "                                                  shuffle = True,\n",
-        "                                                  class_mode = 'raw',\n",
+        "                                                  class_mode = 'categorical',\n",
         "                                                  target_size = (256, 256))"
       ],
       "id": "medical-assurance",
-      "execution_count": 71,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Found 84497 validated image filenames.\n",
-            "Found 1725 validated image filenames.\n",
-            "Found 1760 validated image filenames.\n"
+            "Found 81074 validated image filenames belonging to 12 classes.\n",
+            "Found 4268 validated image filenames belonging to 12 classes.\n",
+            "Found 2640 validated image filenames belonging to 12 classes.\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pSYy4TDFh6SR",
+        "outputId": "e5edb8ea-3cd1-4a04-fb15-9ee21ce686e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# observando os índices das classes encontradas\n",
+        "train_generator.class_indices"
+      ],
+      "id": "pSYy4TDFh6SR",
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Atelectasis': 0,\n",
+              " 'Consolidation': 1,\n",
+              " 'Edema': 2,\n",
+              " 'Effusion': 3,\n",
+              " 'Emphysema': 4,\n",
+              " 'Fibrosis': 5,\n",
+              " 'Infiltration': 6,\n",
+              " 'No Finding': 7,\n",
+              " 'Nodule': 8,\n",
+              " 'Pleural_Thickening': 9,\n",
+              " 'Pneumonia': 10,\n",
+              " 'Pneumothorax': 11}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 108
         }
       ]
     }
